# label-generator

./: .gitignore  Cargo.toml  README.md
src/: component.rs  ignore_condition.rs  main.rs  manifest.rs  output_variant.rs  script.rs
