[package]
description = "Generate labels using components"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
name = "label-generator"
repository = "https://github.com/BrokenLamp/label-generator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
regex = "1.5"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.8"
