[package]
description = "Generate labels using components"
edition = "2021"
license = "MIT"
name = "label-generator"
repository = "https://github.com/BrokenLamp/label-generator"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rayon = "1.5.1"
regex = "1.5"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.8"
usvg = "0.20.0"
xmlwriter = "0.1.0"
